--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -3,13 +3,16 @@
    ========================================================================== */
 
 .masthead {
-  position: relative;
+  position: fixed;
   border-bottom: 1px solid $border-color;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   -webkit-animation-delay: 0.15s;
   animation-delay: 0.15s;
   z-index: 20;
+  width: 100%;
+  background: white;  // set a color to hide content that may appear below masthead
+  height: 70px; // need a magic number here which may break in different viewports 
 
   &__inner-wrap {
     @include clearfix;
